* Putting minification back on * Adding bootstrap transitions for lightbox and popover views

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,7 @@
         <script src="libs/backbone/backbone.js"></script>
         <script src="libs/ckeditor/ckeditor.js"></script>
         <script src="scripts/component/ckeditor/plugins/autogrow/plugin.js"></script>
+        <script src="libs/sass-bootstrap/js/transition.js"></script>
         <script src="libs/sass-bootstrap/js/tooltip.js"></script>
         <script src="libs/sass-bootstrap/js/popover.js"></script>
         <script src="libs/sass-bootstrap/js/modal.js"></script>
