--- a/app/index.html
+++ b/app/index.html
@@ -25,23 +25,14 @@
              */
             var crafterSocial_cfg = {
 
-                                    'url.base'  : '/',
-                                 'url.service'  : 'http://localhost:8090/crafter-social/api/2/',
-                                'url.security'  : 'http://localhost:8090/social-auth/crafter-security-login',
-                                'url.ugc.file'  : '{attachmentId}.json',
-                'url.ugc.{id}.get_attachments'  : '.json?tenant={tenant}',
-                 'url.ugc.{id}.add_attachment'  : '.json',
-                               'url.templates'  : 'templates/'
-
-                /*
-                'url.base'                      : '/ui/',
-                'url.service'                   : '/crafter-social/api/2/',
-                'url.security'                  : '/social-auth/crafter-security-login',
+//                'url.base'                      : '/',
+//                'url.service'                   : '/fixtures/api/2/',
+                'url.service'                   : 'http://127.0.0.1:8090/crafter-social/api/2/',
+                'url.templates'                 : 'templates/',
+                'url.security'                  : 'http://127.0.0.1:8090/social-auth/crafter-security-login',
                 'url.ugc.file'                  : '{attachmentId}.json',
                 'url.ugc.{id}.get_attachments'  : '.json?tenant={tenant}',
-                'url.ugc.{id}.add_attachment'   : '.json',
-                'url.templates'                 : '/ui/templates/'
-                */
+                'url.ugc.{id}.add_attachment'   : '.json'
 
             };
 
@@ -59,6 +50,11 @@
 
                 director.socialise({
                     target: '#jumbotron',
+                    tenant: 'craftercms'
+                });
+
+                director.socialise({
+                    target: '#jumbotron2',
                     tenant: 'craftercms'
                 });
 
@@ -91,8 +87,50 @@
 
             <div class="row marketing">
                 <div class="col-lg-6">
+                    <div id="jumbotron2" data-placement="left">
                     <h4>HTML5 Boilerplate</h4>
                     <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
+                    </div>
+
+                    <h4>Bootstrap</h4>
+                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+
+                    <h4>Modernizr</h4>
+                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+
+
+                    <h4>RequireJS</h4>
+                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
+
+                    <h4>Bootstrap</h4>
+                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+
+                    <h4>Modernizr</h4>
+                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+
+
+                    <h4>RequireJS</h4>
+                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
+
+                    <h4>Bootstrap</h4>
+                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+
+                    <h4>Modernizr</h4>
+                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+
+
+                    <h4>RequireJS</h4>
+                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
+
+                    <h4>Bootstrap</h4>
+                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+
+                    <h4>Modernizr</h4>
+                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+
+
+                    <h4>RequireJS</h4>
+                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
 
                     <h4>Bootstrap</h4>
                     <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
@@ -157,6 +195,7 @@
         <script src="scripts/view/comment.js"></script>
         <script src="scripts/view/commenting.js"></script>
         <script src="scripts/view/discussion.js"></script>
+        <script src="scripts/view/inline.js"></script>
         <script src="scripts/view/lightbox.js"></script>
         <script src="scripts/view/popover.js"></script>
         <script src="scripts/view/commentable.js"></script>
