--- a/app/index.html
+++ b/app/index.html
@@ -3,215 +3,217 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
+<head>
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>ui</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ui</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <!-- build:css(.tmp) styles/index.css -->
-        <link rel="stylesheet" href="styles/index.css">
-        <!-- endbuild -->
+    <!-- build:css(.tmp) styles/index.css -->
+    <link rel="stylesheet" href="styles/index.css">
+    <!-- endbuild -->
 
-        <script>
+    <script>
 
-            /*
-             * Social configuration attributes can be overwritten by
-             * declaring this object before the social javascript is
-             * imported into the page
-             */
-            var crafterSocial_cfg = {
+        /*
+         * Social configuration attributes can be overwritten by
+         * declaring this object before the social javascript is
+         * imported into the page
+         */
+        var crafterSocial_cfg = {
 
-//                'url.base'                      : '/',
-//                'url.service'                   : '/fixtures/api/2/',
-                'url.service'                   : 'http://127.0.0.1:8090/crafter-social/api/2/',
-                'url.templates'                 : 'templates/',
-                'url.security'                  : 'http://127.0.0.1:8090/social-auth/crafter-security-login',
-                'url.ugc.file'                  : '{attachmentId}.json',
-                'url.ugc.{id}.get_attachments'  : '.json?tenant={tenant}',
-                'url.ugc.{id}.add_attachment'   : '.json'
+//            'url.base'                      : '/',
+//            'url.service'                   : '/fixtures/api/2/',
+            'url.service'                   : 'http://127.0.0.1:8090/crafter-social/api/2/',
+            'url.templates'                 : 'templates/',
+            'url.security'                  : 'http://127.0.0.1:8090/social-auth/crafter-security-login',
+            'url.ugc.file'                  : '{attachmentId}.json',
+            'url.ugc.{id}.get_attachments'  : '.json?tenant={tenant}',
+            'url.ugc.{id}.add_attachment'   : '.json'
 
-            };
+        };
 
-            /*
-             * this function needs to be declared before the social javascript
-             * is imported into the page. Other wise it is not necessary to use
-             * a callback and the same can be achieved simply by calling the director
-             * class directly:
-             *
-             *      crafter.social.getDirector().socialise({ ... });
-             *
-             */
-            function crafterSocial_onAppReady ( director, CrafterSocial ) {
-                // console.log('Crafter Social is Ready!');
+        /*
+         * this function needs to be declared before the social javascript
+         * is imported into the page. Other wise it is not necessary to use
+         * a callback and the same can be achieved simply by calling the director
+         * class directly:
+         *
+         *      crafter.social.getDirector().socialise({ ... });
+         *
+         */
+        function crafterSocial_onAppReady ( director, CrafterSocial ) {
+            // console.log('Crafter Social is Ready!');
 
-                director.socialise({
-                    target: '#jumbotron',
-                    tenant: 'craftercms'
-                });
+            director.socialise({
+                target: '#jumbotron',
+                tenant: 'craftercms'
+            });
 
-                director.socialise({
-                    target: '#jumbotron2',
-                    tenant: 'craftercms'
-                });
+            director.socialise({
+                target: '#jumbotron2',
+                tenant: 'craftercms'
+            });
 
-            }
+        }
 
-        </script>
+    </script>
 
-    </head>
-    <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+</head>
+<body>
+<!--[if lt IE 10]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
 
 
-        <div class="container">
-            <div class="header">
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <h3 class="text-muted">ui</h3>
+<div class="container">
+    <div class="header">
+        <ul class="nav nav-pills pull-right">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <h3 class="text-muted">ui</h3>
+    </div>
+
+    <div class="jumbotron" id="jumbotron">
+        <h1><i class="glyphicon glyphicon-info-sign"></i> 'Allo, 'Allo!</h1>
+        <p class="lead">Always a pleasure scaffolding your apps.</p>
+        <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
+    </div>
+
+    <div class="row marketing">
+        <div class="col-lg-6">
+            <div id="jumbotron2" data-placement="left">
+                <h4>HTML5 Boilerplate</h4>
+                <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
             </div>
 
-            <div class="jumbotron" id="jumbotron">
-                <h1><i class="glyphicon glyphicon-info-sign"></i> 'Allo, 'Allo!</h1>
-                <p class="lead">Always a pleasure scaffolding your apps.</p>
-                <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
-            </div>
+            <h4>Bootstrap</h4>
+            <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
 
-            <div class="row marketing">
-                <div class="col-lg-6">
-                    <div id="jumbotron2" data-placement="left">
-                    <h4>HTML5 Boilerplate</h4>
-                    <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
-                    </div>
-
-                    <h4>Bootstrap</h4>
-                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-                    <h4>Modernizr</h4>
-                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+            <h4>Modernizr</h4>
+            <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
 
 
-                    <h4>RequireJS</h4>
-                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
+            <h4>RequireJS</h4>
+            <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
 
-                    <h4>Bootstrap</h4>
-                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+            <h4>Bootstrap</h4>
+            <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
 
-                    <h4>Modernizr</h4>
-                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
-
-
-                    <h4>RequireJS</h4>
-                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
-
-                    <h4>Bootstrap</h4>
-                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-                    <h4>Modernizr</h4>
-                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+            <h4>Modernizr</h4>
+            <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
 
 
-                    <h4>RequireJS</h4>
-                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
+            <h4>RequireJS</h4>
+            <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
 
-                    <h4>Bootstrap</h4>
-                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+            <h4>Bootstrap</h4>
+            <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
 
-                    <h4>Modernizr</h4>
-                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
-
-
-                    <h4>RequireJS</h4>
-                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
-
-                    <h4>Bootstrap</h4>
-                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-                    <h4>Modernizr</h4>
-                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+            <h4>Modernizr</h4>
+            <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
 
 
-                    <h4>RequireJS</h4>
-                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
+            <h4>RequireJS</h4>
+            <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
 
-                </div>
-            </div>
+            <h4>Bootstrap</h4>
+            <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
 
-            <div class="footer">
-                <p>♥ from the Yeoman team</p>
-            </div>
+            <h4>Modernizr</h4>
+            <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+
+
+            <h4>RequireJS</h4>
+            <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
+
+            <h4>Bootstrap</h4>
+            <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+
+            <h4>Modernizr</h4>
+            <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+
+
+            <h4>RequireJS</h4>
+            <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
 
         </div>
+    </div>
 
-        <!-- bower:js -->
-        <script src="libs/modernizr/modernizr.js"></script>
-        <!-- endbower -->
+    <div class="footer">
+        <p>♥ from the Yeoman team</p>
+    </div>
 
-        <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
+</div>
 
-        <!-- build:js scripts/social.js -->
+<!-- bower:js -->
+<script src="libs/modernizr/modernizr.js"></script>
+<!-- endbower -->
 
-        <script src="scripts/app.js"></script>
+<!-- build:css(.tmp) styles/main.css -->
+<link rel="stylesheet" href="styles/main.css">
+<!-- endbuild -->
 
-        <script src="libs/handlebars/handlebars.js"></script>
-        <script src="libs/jquery/jquery.js"></script>
-        <script src="libs/underscore/underscore.js"></script>
-        <script src="libs/backbone/backbone.js"></script>
-        <script src="libs/ckeditor/ckeditor.js"></script>
-        <script src="scripts/component/ckeditor/plugins/autogrow/plugin.js"></script>
-        <script src="libs/sass-bootstrap/js/transition.js"></script>
-        <script src="libs/sass-bootstrap/js/tooltip.js"></script>
-        <script src="libs/sass-bootstrap/js/popover.js"></script>
-        <script src="libs/sass-bootstrap/js/modal.js"></script>
+<!-- build:js scripts/social.js -->
 
-        <script src="scripts/constants.js"></script>
-        <script src="scripts/config.js"></script>
-        <script src="scripts/api.js"></script>
+<script src="scripts/app.js"></script>
 
-        <script src="scripts/component/dropbox.js"></script>
-        <script src="scripts/component/director.js"></script>
-        <script src="scripts/component/editor.js"></script>
-        <script src="scripts/component/template-engine.js"></script>
+<script src="libs/handlebars/handlebars.js"></script>
+<script src="libs/jquery/jquery.js"></script>
+<script src="libs/underscore/underscore.js"></script>
+<script src="libs/backbone/backbone.js"></script>
+<script src="libs/ckeditor/ckeditor.js"></script>
+<script src="scripts/component/ckeditor/plugins/autogrow/plugin.js"></script>
+<script src="libs/sass-bootstrap/js/transition.js"></script>
+<script src="libs/sass-bootstrap/js/tooltip.js"></script>
+<script src="libs/sass-bootstrap/js/popover.js"></script>
+<script src="libs/sass-bootstrap/js/modal.js"></script>
+<script src="libs/sass-bootstrap/js/dropdown.js"></script>
 
-        <script src="scripts/model/profile.js"></script>
-        <script src="scripts/model/file.js"></script>
-        <script src="scripts/model/comment.js"></script>
+<script src="scripts/constants.js"></script>
+<script src="scripts/config.js"></script>
+<script src="scripts/api.js"></script>
 
-        <script src="scripts/controller/base.js"></script>
-        <script src="scripts/controller/files.js"></script>
+<script src="scripts/component/dropbox.js"></script>
+<script src="scripts/component/director.js"></script>
+<script src="scripts/component/editor.js"></script>
+<script src="scripts/component/template-engine.js"></script>
 
-        <script src="scripts/view/base.js"></script>
-        <script src="scripts/view/modal.js"></script>
-        <script src="scripts/view/comment.js"></script>
-        <script src="scripts/view/commenting.js"></script>
-        <script src="scripts/view/discussion.js"></script>
-        <script src="scripts/view/inline.js"></script>
-        <script src="scripts/view/lightbox.js"></script>
-        <script src="scripts/view/popover.js"></script>
-        <script src="scripts/view/commentable.js"></script>
-        <script src="scripts/view/barget/base.js"></script>
-        <script src="scripts/view/barget/reveal.js"></script>
-        <script src="scripts/view/barget/feedback.js"></script>
-        <script src="scripts/view/barget/share.js"></script>
-        <script src="scripts/view/barget/rate.js"></script>
-        <script src="scripts/view/social-bar.js"></script>
-        <script src="scripts/view/auth.js"></script>
-        <script src="scripts/view/file.js"></script>
-        <script src="scripts/view/files.js"></script>
+<script src="scripts/model/profile.js"></script>
+<script src="scripts/model/file.js"></script>
+<script src="scripts/model/comment.js"></script>
 
-        <script src="scripts/starter.js"></script>
+<script src="scripts/controller/base.js"></script>
+<script src="scripts/controller/files.js"></script>
 
-        <!-- endbuild -->
+<script src="scripts/view/base.js"></script>
+<script src="scripts/view/modal.js"></script>
+<script src="scripts/view/comment.js"></script>
+<script src="scripts/view/commenting.js"></script>
+<script src="scripts/view/options.js"></script>
+<script src="scripts/view/discussion.js"></script>
+<script src="scripts/view/inline.js"></script>
+<script src="scripts/view/lightbox.js"></script>
+<script src="scripts/view/popover.js"></script>
+<script src="scripts/view/commentable.js"></script>
+<script src="scripts/view/barget/base.js"></script>
+<script src="scripts/view/barget/reveal.js"></script>
+<script src="scripts/view/barget/feedback.js"></script>
+<script src="scripts/view/barget/share.js"></script>
+<script src="scripts/view/barget/rate.js"></script>
+<script src="scripts/view/social-bar.js"></script>
+<script src="scripts/view/auth.js"></script>
+<script src="scripts/view/file.js"></script>
+<script src="scripts/view/files.js"></script>
+
+<script src="scripts/starter.js"></script>
+
+<!-- endbuild -->
 
 </body>
 </html>
