Making it easier to startup and run on first time check out

--- a/app/index.html
+++ b/app/index.html
@@ -110,14 +110,13 @@
 
         var cfg = {
 
-//                'url.base'                      : '/',
-//                'url.service'                   : '/fixtures/api/2/',
-            'url.service'                   : 'http://10.107.209.100:8090/crafter-social/api/2/',
-            'url.templates'                 : 'http://10.107.209.100:9000/templates/',
-            'url.security'                  : 'http://10.107.209.100:8090/social-auth/crafter-security-login',
-            'url.ugc.file'                  : '{attachmentId}.json',
-            'url.ugc.{id}.get_attachments'  : '.json?tenant={tenant}',
-            'url.ugc.{id}.add_attachment'   : '.json'
+            'url.base'                      : '/',
+            'url.service'                   : '/fixtures/api/2/'/*,
+
+            'url.service'                   : 'http://0.0.0.0:8090/crafter-social/api/2/',
+            'url.templates'                 : 'http://0.0.0.0:9000/templates/',
+            'url.security'                  : 'http://0.0.0.0:8090/social-auth/crafter-security-login',
+            */
 
             /**
              * Overriding a director handler example:
