--- a/app/index.html
+++ b/app/index.html
@@ -110,11 +110,11 @@
 
         var cfg = {
 
-//                'url.base'                      : '/',
-//                'url.service'                   : '/fixtures/api/2/',
-            'url.service'                   : 'http://10.107.209.100:8090/crafter-social/api/2/',
-            'url.templates'                 : 'http://10.107.209.100:9000/templates/',
-            'url.security'                  : 'http://10.107.209.100:8090/social-auth/crafter-security-login',
+            'url.base'                      : '/',
+            'url.service'                   : '/fixtures/api/2/',
+            //'url.service'                   : '/fixtures/api/',
+            'url.templates'                 : '/templates/',
+            'url.security'                  : 'http://0.0.0.0:8090/social-auth/crafter-security-login',
             'url.ugc.file'                  : '{attachmentId}.json',
             'url.ugc.{id}.get_attachments'  : '.json?tenant={tenant}',
             'url.ugc.{id}.add_attachment'   : '.json'
