Removing bad file reference.

--- a/app/index.html
+++ b/app/index.html
@@ -175,7 +175,7 @@
 <script src="scripts/vendor/jquery-browser-plugin/dist/jquery.browser.min.js"></script>
 <script src="libs/underscore/underscore.js"></script>
 <script src="libs/backbone/backbone.js"></script>
-<script src="libs/ckeditor/ckeditor-debug.js"></script>
+<script src="libs/ckeditor/ckeditor.js"></script>
 <script src="scripts/component/ckeditor/plugins/autogrow/plugin.js"></script>
 <script src="libs/sass-bootstrap/js/transition.js"></script>
 <script src="libs/sass-bootstrap/js/tooltip.js"></script>
